--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,12 @@ redcarpet:
         - superscript
         - underline
         - highlighted
+gems:
+    - jekyll-mentions
+    - jemoji
+    - jekyll-redirect-from
+    - jekyll-sitemap
+    - jekyll-feed
 encoding: UTF-8
 permalink: pretty
 email: cscorley@crimson.ua.edu
