--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ redcarpet:
         - superscript
         - underline
         - highlighted
-gems:
+plugins:
     - jekyll-mentions
     - jemoji
     - jekyll-redirect-from
