--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ plugins:
   - jekyll-feed
 encoding: UTF-8
 permalink: pretty
-email: cscorley@crimson.ua.edu
+email: cscorley@gmail.com
 github_username: cscorley
 exclude:
   - Makefile
